# ITKLibrary

./: .gitignore  CMakeLists.txt  ITKLibrary.sln  README.md
ITKLibrary/: ITKLibrary.vcxproj  ITKLibrary.vcxproj.filters  ITKReads.cpp
Lib_for_linux/: libITKIOGDCM-5.4.so.1  libdcmdata.so.19  libdouble-conversion.so.3  libexpat.so.1  libgdcmCommon.so.3.0  libgdcmDSED.so.3.0  libgdcmIOD.so.3.0  libgdcmMSFF.so.3.0  libofstd.so.19  libtbb.so.12  libuuid.so.1  libvtkCommonMath-9.5.so.1  libvtktoken-9.5.so.1  libzstd.so.1
src/: ITKReads.cpp
